small(fix): update lessons popup z-indexes

--- a/src/components/exam.css
+++ b/src/components/exam.css
@@ -521,7 +521,7 @@ body.select-menu-open {
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 1000;
+  z-index: 1100 !important;
   padding: 20px;
 }
 
